Fix CORS configuration for Render frontend